--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,6 +3,9 @@
     <title>Anubha's blog</title>
   </head>
   <body background="photo.JPG" >
-   <h4>We will design later,first let's learn</h4>
+   <div>
+    <h1><a href="">Anubha's Blog</a></h1>
+   </div>
+   {{posts}}
   </body>
 </html>
